# xai-learning-experience-platform

./: README.md
backend/: Dockerfile  Makefile  compose.yml  pyproject.toml
backend/config/: settings.py  urls.py
backend/lxp/: admin.py  api.py  apps.py  grok_service.py  models.py
backend/lxp/management/commands/: seed_data.py
backend/lxp/migrations/: 0001_initial.py
frontend/: openapi-ts.config.ts  package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: AIMentorChat.tsx  ContentViewerModal.tsx  CreateLearningPathModal.tsx  LearningPathDetailModal.tsx
frontend/src/pages/: ContentViewerPage.tsx  EducatorDashboard.tsx  Landing.tsx  LearningPathDetailPage.tsx  Login.tsx  StudentDashboard.tsx
