[project]
name = "xai-lxp"
version = "0.1.0"
description = "AI-native Learning Experience Platform"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.2",
    "django-cors-headers>=4.9.0",
    "django-ninja>=1.5.3",
    "psycopg>=3.3.2",
    "openai>=1.58.1",
    "python-dotenv>=1.0.1",
]
